# opencv_homework

./: CMakeLists.txt  README.md
dataset/calibration/: image_list.bat  image_list.sh
src/: calibrate.cpp  reconstruct.cpp
